// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin adds __typename selections for abstract types 1`] = `
"(AbstractTypeDocument as any).__relay = (function(){
var v0 = [
  {
    \\"alias\\": null,
    \\"args\\": [
      {
        \\"kind\\": \\"Literal\\",
        \\"name\\": \\"id\\",
        \\"value\\": \\"42\\"
      }
    ],
    \\"concreteType\\": null,
    \\"kind\\": \\"LinkedField\\",
    \\"name\\": \\"node\\",
    \\"plural\\": false,
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": null,
        \\"kind\\": \\"ScalarField\\",
        \\"name\\": \\"__typename\\",
        \\"storageKey\\": null
      },
      {
        \\"alias\\": null,
        \\"args\\": null,
        \\"kind\\": \\"ScalarField\\",
        \\"name\\": \\"id\\",
        \\"storageKey\\": null
      }
    ],
    \\"storageKey\\": \\"node(id:\\\\\\"42\\\\\\")\\"
  }
];
return {
  \\"fragment\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Fragment\\",
    \\"metadata\\": null,
    \\"name\\": \\"AbstractType\\",
    \\"selections\\": (v0/*: any*/),
    \\"type\\": \\"Query\\",
    \\"abstractKey\\": null
  },
  \\"kind\\": \\"Request\\",
  \\"operation\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Operation\\",
    \\"name\\": \\"AbstractType\\",
    \\"selections\\": (v0/*: any*/)
  },
  \\"params\\": {
    \\"cacheID\\": \\"d41d8cd98f00b204e9800998ecf8427e\\",
    \\"metadata\\": {},
    \\"name\\": \\"AbstractType\\",
    \\"operationKind\\": \\"query\\",
    \\"text\\": \\"\\"
  }
};
})();
(AbstractTypeDocument as any).__relay.hash = \\"d7d42d5624b74de8fd74c02a324ca10b\\";"
`;

exports[`plugin emits connection metadata 1`] = `
"(ConnectionQueryDocument as any).__relay = (function(){
var v0 = [
  {
    \\"kind\\": \\"Literal\\",
    \\"name\\": \\"id\\",
    \\"value\\": \\"42\\"
  }
],
v1 = [
  {
    \\"kind\\": \\"Literal\\",
    \\"name\\": \\"first\\",
    \\"value\\": 10
  },
  {
    \\"kind\\": \\"Literal\\",
    \\"name\\": \\"sort\\",
    \\"value\\": \\"DESC\\"
  }
],
v2 = {
  \\"alias\\": null,
  \\"args\\": (v1/*: any*/),
  \\"concreteType\\": \\"MessagesConnection\\",
  \\"kind\\": \\"LinkedField\\",
  \\"name\\": \\"messages\\",
  \\"plural\\": false,
  \\"selections\\": [
    {
      \\"alias\\": null,
      \\"args\\": null,
      \\"concreteType\\": \\"MessagesConnectionEdge\\",
      \\"kind\\": \\"LinkedField\\",
      \\"name\\": \\"edges\\",
      \\"plural\\": true,
      \\"selections\\": [
        {
          \\"alias\\": null,
          \\"args\\": null,
          \\"concreteType\\": \\"Message\\",
          \\"kind\\": \\"LinkedField\\",
          \\"name\\": \\"node\\",
          \\"plural\\": false,
          \\"selections\\": [
            {
              \\"alias\\": null,
              \\"args\\": null,
              \\"kind\\": \\"ScalarField\\",
              \\"name\\": \\"id\\",
              \\"storageKey\\": null
            }
          ],
          \\"storageKey\\": null
        },
        {
          \\"kind\\": \\"InlineFragment\\",
          \\"selections\\": [
            {
              \\"alias\\": null,
              \\"args\\": null,
              \\"kind\\": \\"ScalarField\\",
              \\"name\\": \\"cursor\\",
              \\"storageKey\\": null
            },
            {
              \\"alias\\": null,
              \\"args\\": null,
              \\"concreteType\\": \\"Message\\",
              \\"kind\\": \\"LinkedField\\",
              \\"name\\": \\"node\\",
              \\"plural\\": false,
              \\"selections\\": [
                {
                  \\"alias\\": null,
                  \\"args\\": null,
                  \\"kind\\": \\"ScalarField\\",
                  \\"name\\": \\"__typename\\",
                  \\"storageKey\\": null
                }
              ],
              \\"storageKey\\": null
            }
          ],
          \\"type\\": \\"MessagesConnectionEdge\\",
          \\"abstractKey\\": null
        }
      ],
      \\"storageKey\\": null
    },
    {
      \\"alias\\": null,
      \\"args\\": null,
      \\"concreteType\\": \\"PageInfo\\",
      \\"kind\\": \\"LinkedField\\",
      \\"name\\": \\"pageInfo\\",
      \\"plural\\": false,
      \\"selections\\": [
        {
          \\"kind\\": \\"InlineFragment\\",
          \\"selections\\": [
            {
              \\"alias\\": null,
              \\"args\\": null,
              \\"kind\\": \\"ScalarField\\",
              \\"name\\": \\"endCursor\\",
              \\"storageKey\\": null
            },
            {
              \\"alias\\": null,
              \\"args\\": null,
              \\"kind\\": \\"ScalarField\\",
              \\"name\\": \\"hasNextPage\\",
              \\"storageKey\\": null
            }
          ],
          \\"type\\": \\"PageInfo\\",
          \\"abstractKey\\": null
        }
      ],
      \\"storageKey\\": null
    }
  ],
  \\"storageKey\\": \\"messages(first:10,sort:\\\\\\"DESC\\\\\\")\\"
};
return {
  \\"fragment\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Fragment\\",
    \\"metadata\\": null,
    \\"name\\": \\"ConnectionQuery\\",
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": (v0/*: any*/),
        \\"concreteType\\": \\"Conversation\\",
        \\"kind\\": \\"LinkedField\\",
        \\"name\\": \\"conversation\\",
        \\"plural\\": false,
        \\"selections\\": [
          (v2/*: any*/)
        ],
        \\"storageKey\\": \\"conversation(id:\\\\\\"42\\\\\\")\\"
      }
    ],
    \\"type\\": \\"Query\\",
    \\"abstractKey\\": null
  },
  \\"kind\\": \\"Request\\",
  \\"operation\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Operation\\",
    \\"name\\": \\"ConnectionQuery\\",
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": (v0/*: any*/),
        \\"concreteType\\": \\"Conversation\\",
        \\"kind\\": \\"LinkedField\\",
        \\"name\\": \\"conversation\\",
        \\"plural\\": false,
        \\"selections\\": [
          (v2/*: any*/),
          {
            \\"alias\\": null,
            \\"args\\": (v1/*: any*/),
            \\"filters\\": [
              \\"sort\\"
            ],
            \\"handle\\": \\"connection\\",
            \\"key\\": \\"Connection_messages\\",
            \\"kind\\": \\"LinkedHandle\\",
            \\"name\\": \\"messages\\"
          }
        ],
        \\"storageKey\\": \\"conversation(id:\\\\\\"42\\\\\\")\\"
      }
    ]
  },
  \\"params\\": {
    \\"cacheID\\": \\"d41d8cd98f00b204e9800998ecf8427e\\",
    \\"metadata\\": {
      \\"connection\\": [
        {
          \\"count\\": null,
          \\"cursor\\": null,
          \\"direction\\": \\"forward\\",
          \\"path\\": [
            \\"conversation\\",
            \\"messages\\"
          ]
        }
      ]
    },
    \\"name\\": \\"ConnectionQuery\\",
    \\"operationKind\\": \\"query\\",
    \\"text\\": \\"\\"
  }
};
})();
(ConnectionQueryDocument as any).__relay.hash = \\"0b3af5beb4b48f15d706c8b0fd1c6cb6\\";"
`;

exports[`plugin generates a ConcreteRequest for an operation 1`] = `
"(SomeQueryDocument as any).__relay = (function(){
var v0 = [
  {
    \\"alias\\": null,
    \\"args\\": [
      {
        \\"kind\\": \\"Literal\\",
        \\"name\\": \\"id\\",
        \\"value\\": \\"42\\"
      }
    ],
    \\"concreteType\\": \\"Conversation\\",
    \\"kind\\": \\"LinkedField\\",
    \\"name\\": \\"conversation\\",
    \\"plural\\": false,
    \\"selections\\": [
      {
        \\"kind\\": \\"InlineFragment\\",
        \\"selections\\": [
          {
            \\"alias\\": null,
            \\"args\\": null,
            \\"kind\\": \\"ScalarField\\",
            \\"name\\": \\"id\\",
            \\"storageKey\\": null
          },
          {
            \\"alias\\": null,
            \\"args\\": [
              {
                \\"kind\\": \\"Literal\\",
                \\"name\\": \\"first\\",
                \\"value\\": 10
              }
            ],
            \\"concreteType\\": \\"MessagesConnection\\",
            \\"kind\\": \\"LinkedField\\",
            \\"name\\": \\"messages\\",
            \\"plural\\": false,
            \\"selections\\": [
              {
                \\"alias\\": null,
                \\"args\\": null,
                \\"concreteType\\": \\"MessagesConnectionEdge\\",
                \\"kind\\": \\"LinkedField\\",
                \\"name\\": \\"edges\\",
                \\"plural\\": true,
                \\"selections\\": [
                  {
                    \\"alias\\": null,
                    \\"args\\": null,
                    \\"concreteType\\": \\"Message\\",
                    \\"kind\\": \\"LinkedField\\",
                    \\"name\\": \\"node\\",
                    \\"plural\\": false,
                    \\"selections\\": [
                      {
                        \\"kind\\": \\"InlineFragment\\",
                        \\"selections\\": [
                          {
                            \\"alias\\": null,
                            \\"args\\": null,
                            \\"kind\\": \\"ScalarField\\",
                            \\"name\\": \\"text\\",
                            \\"storageKey\\": null
                          }
                        ],
                        \\"type\\": \\"Message\\",
                        \\"abstractKey\\": null
                      }
                    ],
                    \\"storageKey\\": null
                  }
                ],
                \\"storageKey\\": null
              }
            ],
            \\"storageKey\\": \\"messages(first:10)\\"
          }
        ],
        \\"type\\": \\"Conversation\\",
        \\"abstractKey\\": null
      }
    ],
    \\"storageKey\\": \\"conversation(id:\\\\\\"42\\\\\\")\\"
  }
];
return {
  \\"fragment\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Fragment\\",
    \\"metadata\\": null,
    \\"name\\": \\"SomeQuery\\",
    \\"selections\\": (v0/*: any*/),
    \\"type\\": \\"Query\\",
    \\"abstractKey\\": null
  },
  \\"kind\\": \\"Request\\",
  \\"operation\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Operation\\",
    \\"name\\": \\"SomeQuery\\",
    \\"selections\\": (v0/*: any*/)
  },
  \\"params\\": {
    \\"cacheID\\": \\"d41d8cd98f00b204e9800998ecf8427e\\",
    \\"metadata\\": {},
    \\"name\\": \\"SomeQuery\\",
    \\"operationKind\\": \\"query\\",
    \\"text\\": \\"\\"
  }
};
})();
(SomeQueryDocument as any).__relay.hash = \\"912c3bb3069a96131802613731c1a67d\\";"
`;

exports[`plugin generates a ReaderFragment for a fragment 1`] = `
"(ConversationFragmentFragmentDoc as any).__relay = {
  \\"argumentDefinitions\\": [],
  \\"kind\\": \\"Fragment\\",
  \\"metadata\\": null,
  \\"name\\": \\"ConversationFragment\\",
  \\"selections\\": [
    {
      \\"alias\\": null,
      \\"args\\": null,
      \\"kind\\": \\"ScalarField\\",
      \\"name\\": \\"id\\",
      \\"storageKey\\": null
    },
    {
      \\"alias\\": null,
      \\"args\\": [
        {
          \\"kind\\": \\"Literal\\",
          \\"name\\": \\"first\\",
          \\"value\\": 10
        }
      ],
      \\"concreteType\\": \\"MessagesConnection\\",
      \\"kind\\": \\"LinkedField\\",
      \\"name\\": \\"messages\\",
      \\"plural\\": false,
      \\"selections\\": [
        {
          \\"alias\\": null,
          \\"args\\": null,
          \\"concreteType\\": \\"MessagesConnectionEdge\\",
          \\"kind\\": \\"LinkedField\\",
          \\"name\\": \\"edges\\",
          \\"plural\\": true,
          \\"selections\\": [
            {
              \\"alias\\": null,
              \\"args\\": null,
              \\"concreteType\\": \\"Message\\",
              \\"kind\\": \\"LinkedField\\",
              \\"name\\": \\"node\\",
              \\"plural\\": false,
              \\"selections\\": [
                {
                  \\"args\\": null,
                  \\"kind\\": \\"FragmentSpread\\",
                  \\"name\\": \\"MessageFragment\\"
                }
              ],
              \\"storageKey\\": null
            }
          ],
          \\"storageKey\\": null
        }
      ],
      \\"storageKey\\": \\"messages(first:10)\\"
    }
  ],
  \\"type\\": \\"Conversation\\",
  \\"abstractKey\\": null
};
(ConversationFragmentFragmentDoc as any).__relay.hash = \\"3070480a90158780c7529708ea80c630\\";"
`;

exports[`plugin handles multiple operations in a single document 1`] = `
"(QueryOneDocument as any).__relay = (function(){
var v0 = [
  {
    \\"alias\\": null,
    \\"args\\": [
      {
        \\"kind\\": \\"Literal\\",
        \\"name\\": \\"id\\",
        \\"value\\": \\"42\\"
      }
    ],
    \\"concreteType\\": \\"Conversation\\",
    \\"kind\\": \\"LinkedField\\",
    \\"name\\": \\"conversation\\",
    \\"plural\\": false,
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": null,
        \\"kind\\": \\"ScalarField\\",
        \\"name\\": \\"__typename\\",
        \\"storageKey\\": null
      }
    ],
    \\"storageKey\\": \\"conversation(id:\\\\\\"42\\\\\\")\\"
  }
];
return {
  \\"fragment\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Fragment\\",
    \\"metadata\\": null,
    \\"name\\": \\"QueryOne\\",
    \\"selections\\": (v0/*: any*/),
    \\"type\\": \\"Query\\",
    \\"abstractKey\\": null
  },
  \\"kind\\": \\"Request\\",
  \\"operation\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Operation\\",
    \\"name\\": \\"QueryOne\\",
    \\"selections\\": (v0/*: any*/)
  },
  \\"params\\": {
    \\"cacheID\\": \\"d41d8cd98f00b204e9800998ecf8427e\\",
    \\"metadata\\": {},
    \\"name\\": \\"QueryOne\\",
    \\"operationKind\\": \\"query\\",
    \\"text\\": \\"\\"
  }
};
})();
(QueryOneDocument as any).__relay.hash = \\"eeeaf14928261dc2990440f192360f22\\";
(QueryTwoDocument as any).__relay = (function(){
var v0 = [
  {
    \\"alias\\": null,
    \\"args\\": [
      {
        \\"kind\\": \\"Literal\\",
        \\"name\\": \\"id\\",
        \\"value\\": \\"42\\"
      }
    ],
    \\"concreteType\\": \\"Conversation\\",
    \\"kind\\": \\"LinkedField\\",
    \\"name\\": \\"conversation\\",
    \\"plural\\": false,
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": null,
        \\"kind\\": \\"ScalarField\\",
        \\"name\\": \\"id\\",
        \\"storageKey\\": null
      }
    ],
    \\"storageKey\\": \\"conversation(id:\\\\\\"42\\\\\\")\\"
  }
];
return {
  \\"fragment\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Fragment\\",
    \\"metadata\\": null,
    \\"name\\": \\"QueryTwo\\",
    \\"selections\\": (v0/*: any*/),
    \\"type\\": \\"Query\\",
    \\"abstractKey\\": null
  },
  \\"kind\\": \\"Request\\",
  \\"operation\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Operation\\",
    \\"name\\": \\"QueryTwo\\",
    \\"selections\\": (v0/*: any*/)
  },
  \\"params\\": {
    \\"cacheID\\": \\"d41d8cd98f00b204e9800998ecf8427e\\",
    \\"metadata\\": {},
    \\"name\\": \\"QueryTwo\\",
    \\"operationKind\\": \\"query\\",
    \\"text\\": \\"\\"
  }
};
})();
(QueryTwoDocument as any).__relay.hash = \\"ee9db67d7165550f73e296ac54ed6a05\\";"
`;
